--- a/about.html
+++ b/about.html
@@ -3,18 +3,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="./stylecss/about.css">
+    <script src="contact.js"></script>
 </head>
 <body>
-    <nav>
-        <div class="container nav_container">
-            <a href="index.html"><h4>young emeritus</h4></a>
-            <ul>
-                <li><a href="index.html">index</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="courses.html">courses</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-            
+    <nav class="navbar">
+        <div class="logo">MyLogo</div>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
         </div>
     </nav>
 </body>
